--- a/trunk/package.json
+++ b/trunk/package.json
@@ -40,6 +40,7 @@
 		"mini-css-extract-plugin": "^2.4.4",
 		"sass-loader": "^12.3.0",
 		"style-loader": "^3.3.1",
+		"webpack-fix-style-only-entries": "^0.6.1",
 		"webpack-livereload-plugin": "^3.0.2"
 	}
 }
