--- a/trunk/package.json
+++ b/trunk/package.json
@@ -27,6 +27,7 @@
 		"classnames": "^2.3.1",
 		"glob-all": "^3.3.1",
 		"react": "^17.0.2",
+		"react-datepicker": "^4.16.0",
 		"react-dom": "^17.0.2",
 		"react-sortable-hoc": "^2.0.0",
 		"scroll-into-view": "^1.16.0",
