--- a/trunk/package.json
+++ b/trunk/package.json
@@ -29,6 +29,7 @@
 		"react": "^17.0.2",
 		"react-datepicker": "^4.16.0",
 		"react-dom": "^17.0.2",
+		"react-paginate": "^8.2.0",
 		"react-sortable-hoc": "^2.0.0",
 		"scroll-into-view": "^1.16.0",
 		"tiny-slider": "^2.9.4"
