--- a/trunk/package.json
+++ b/trunk/package.json
@@ -28,6 +28,7 @@
 		"glob-all": "^3.3.1",
 		"react": "^17.0.2",
 		"react-datepicker": "^4.16.0",
+		"react-debounce-input": "^3.3.0",
 		"react-dom": "^17.0.2",
 		"react-paginate": "^8.2.0",
 		"react-sortable-hoc": "^2.0.0",
