--- a/trunk/package.json
+++ b/trunk/package.json
@@ -27,6 +27,7 @@
 		"classnames": "^2.3.2",
 		"glob-all": "^3.3.1",
 		"react": "^17.0.2",
+		"react-chartjs-2": "^5.2.0",
 		"react-datepicker": "^4.16.0",
 		"react-debounce-input": "^3.3.0",
 		"react-dom": "^17.0.2",
