--- a/trunk/package.json
+++ b/trunk/package.json
@@ -24,6 +24,7 @@
 		"@wordpress/i18n": "^4.2.2",
 		"@wordpress/server-side-render": "^3.20.0",
 		"array-move": "^4.0.0",
+		"chart.js": "^4.3.0",
 		"classnames": "^2.3.2",
 		"glob-all": "^3.3.1",
 		"react": "^17.0.2",
